@@ -40,6 +40,10 @@ content = Thanks
 ; Docs: https://metacpan.org/pod/Dist::Zilla::Plugin::GenerateFile
 
 
+; CPANTS Kwalitee extra indicator: has_meta_json
+; https://cpants.cpanauthors.org/kwalitee/has_meta_json
+[MetaJSON]
+
 ; External plugins
 [PodWeaver]
 
@@ -60,3 +64,8 @@ untracked_files = warn
 ; Values: warn, ignore, die (default)
 
 [Prereqs::AuthorDeps]
+
+[MetaProvides::Package]
+; https://metacpan.org/pod/Dist::Zilla::Plugin::MetaProvides
+; CPANTS Kwalitee experimental indicator: meta_yml_has_provides
+; https://cpants.cpanauthors.org/kwalitee/meta_yml_has_provides
